--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -128,7 +128,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python_version: ["3.6", "3.7", "3.8"]
+        python_version: ["3.7", "3.8"]
         optional_libraries: ["minimal", "optional"]
     steps:
       - name: Set up python ${{ matrix.python_version }}
