--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 scipy>=0.13.3
-numpy==1.19.1
-pandas==1.0.4
-tqdm==4.62.0
+numpy>=1.13.3
+pandas>=0.24.1,<2.0.0,!=1.1.0,!=1.1.1
+tqdm>=4.32.0
 pyyaml>=3.12
 cloudpickle>=0.4.0
 distributed>=2.12.0
 dask[dataframe]>=2.12.0
-dask==2021.12.0
 psutil>=5.4.8
 click>=7.0.0
